# fitness-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/exercise_db/: __init__.py  client.py  config.py  exceptions.py
src/exercise_db.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_client.py
